// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferCard должен корректно отображаться Тип OfferCardType.CITIES 1`] = `
<article
  className="cities__place-card place-card"
  onMouseLeave={[Function]}
>
  <OfferCardImage
    cardType="cities"
    offer={
      Object {
        "bedrooms": 3,
        "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
        "favorite": false,
        "features": Array [
          "Laptop friendly workspace",
          "Washer",
          "Towels",
          "Fridge",
          "Air conditioning",
          "Baby seat",
          "Breakfast",
        ],
        "host": Object {
          "avatar": "img/avatar-angelina.jpg",
          "id": 25,
          "name": "Angelina",
          "super": true,
        },
        "id": "1",
        "location": Object {
          "city": Object {
            "coordinates": Array [
              50.938361,
              6.959974,
            ],
            "name": "Cologne",
            "zoom": 13,
          },
          "coordinates": Array [
            50.957361,
            6.9509739999999995,
          ],
          "zoom": 16,
        },
        "maxAdults": 4,
        "photos": Array [
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/9.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/10.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/4.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/19.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/3.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/2.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/11.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/1.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/17.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/5.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/13.jpg",
        ],
        "premium": false,
        "price": 493,
        "rating": 3.8,
        "thumbnail": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
        "title": "The house among olive ",
        "type": "house",
      }
    }
  />
  <OfferCardInfo
    favorites={false}
    offer={
      Object {
        "bedrooms": 3,
        "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
        "favorite": false,
        "features": Array [
          "Laptop friendly workspace",
          "Washer",
          "Towels",
          "Fridge",
          "Air conditioning",
          "Baby seat",
          "Breakfast",
        ],
        "host": Object {
          "avatar": "img/avatar-angelina.jpg",
          "id": 25,
          "name": "Angelina",
          "super": true,
        },
        "id": "1",
        "location": Object {
          "city": Object {
            "coordinates": Array [
              50.938361,
              6.959974,
            ],
            "name": "Cologne",
            "zoom": 13,
          },
          "coordinates": Array [
            50.957361,
            6.9509739999999995,
          ],
          "zoom": 16,
        },
        "maxAdults": 4,
        "photos": Array [
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/9.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/10.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/4.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/19.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/3.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/2.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/11.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/1.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/17.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/5.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/13.jpg",
        ],
        "premium": false,
        "price": 493,
        "rating": 3.8,
        "thumbnail": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
        "title": "The house among olive ",
        "type": "house",
      }
    }
    roundRating={true}
  />
</article>
`;

exports[`OfferCard должен корректно отображаться Тип OfferCardType.FAVORITE 1`] = `
<article
  className="favorites__card place-card"
  onMouseLeave={[Function]}
>
  <OfferCardImage
    cardType="favorite"
    offer={
      Object {
        "bedrooms": 3,
        "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
        "favorite": false,
        "features": Array [
          "Laptop friendly workspace",
          "Washer",
          "Towels",
          "Fridge",
          "Air conditioning",
          "Baby seat",
          "Breakfast",
        ],
        "host": Object {
          "avatar": "img/avatar-angelina.jpg",
          "id": 25,
          "name": "Angelina",
          "super": true,
        },
        "id": "1",
        "location": Object {
          "city": Object {
            "coordinates": Array [
              50.938361,
              6.959974,
            ],
            "name": "Cologne",
            "zoom": 13,
          },
          "coordinates": Array [
            50.957361,
            6.9509739999999995,
          ],
          "zoom": 16,
        },
        "maxAdults": 4,
        "photos": Array [
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/9.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/10.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/4.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/19.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/3.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/2.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/11.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/1.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/17.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/5.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/13.jpg",
        ],
        "premium": false,
        "price": 493,
        "rating": 3.8,
        "thumbnail": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
        "title": "The house among olive ",
        "type": "house",
      }
    }
  />
  <OfferCardInfo
    favorites={true}
    offer={
      Object {
        "bedrooms": 3,
        "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
        "favorite": false,
        "features": Array [
          "Laptop friendly workspace",
          "Washer",
          "Towels",
          "Fridge",
          "Air conditioning",
          "Baby seat",
          "Breakfast",
        ],
        "host": Object {
          "avatar": "img/avatar-angelina.jpg",
          "id": 25,
          "name": "Angelina",
          "super": true,
        },
        "id": "1",
        "location": Object {
          "city": Object {
            "coordinates": Array [
              50.938361,
              6.959974,
            ],
            "name": "Cologne",
            "zoom": 13,
          },
          "coordinates": Array [
            50.957361,
            6.9509739999999995,
          ],
          "zoom": 16,
        },
        "maxAdults": 4,
        "photos": Array [
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/9.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/10.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/4.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/19.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/3.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/2.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/11.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/1.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/17.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/5.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/13.jpg",
        ],
        "premium": false,
        "price": 493,
        "rating": 3.8,
        "thumbnail": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
        "title": "The house among olive ",
        "type": "house",
      }
    }
    roundRating={false}
  />
</article>
`;

exports[`OfferCard должен корректно отображаться Тип OfferCardType.NEAR_PLACE 1`] = `
<article
  className="near-places__card place-card"
  onMouseLeave={[Function]}
>
  <OfferCardImage
    cardType="near_place"
    offer={
      Object {
        "bedrooms": 3,
        "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
        "favorite": false,
        "features": Array [
          "Laptop friendly workspace",
          "Washer",
          "Towels",
          "Fridge",
          "Air conditioning",
          "Baby seat",
          "Breakfast",
        ],
        "host": Object {
          "avatar": "img/avatar-angelina.jpg",
          "id": 25,
          "name": "Angelina",
          "super": true,
        },
        "id": "1",
        "location": Object {
          "city": Object {
            "coordinates": Array [
              50.938361,
              6.959974,
            ],
            "name": "Cologne",
            "zoom": 13,
          },
          "coordinates": Array [
            50.957361,
            6.9509739999999995,
          ],
          "zoom": 16,
        },
        "maxAdults": 4,
        "photos": Array [
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/9.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/10.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/4.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/19.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/3.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/2.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/11.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/1.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/17.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/5.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/13.jpg",
        ],
        "premium": false,
        "price": 493,
        "rating": 3.8,
        "thumbnail": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
        "title": "The house among olive ",
        "type": "house",
      }
    }
  />
  <OfferCardInfo
    favorites={false}
    offer={
      Object {
        "bedrooms": 3,
        "description": "Discover daily local life in city center, friendly neighborhood, clandestine casino, karaoke, old-style artisans, art gallery and artist studio downstairs.",
        "favorite": false,
        "features": Array [
          "Laptop friendly workspace",
          "Washer",
          "Towels",
          "Fridge",
          "Air conditioning",
          "Baby seat",
          "Breakfast",
        ],
        "host": Object {
          "avatar": "img/avatar-angelina.jpg",
          "id": 25,
          "name": "Angelina",
          "super": true,
        },
        "id": "1",
        "location": Object {
          "city": Object {
            "coordinates": Array [
              50.938361,
              6.959974,
            ],
            "name": "Cologne",
            "zoom": 13,
          },
          "coordinates": Array [
            50.957361,
            6.9509739999999995,
          ],
          "zoom": 16,
        },
        "maxAdults": 4,
        "photos": Array [
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/15.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/16.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/9.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/10.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/4.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/19.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/3.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/2.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/11.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/1.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/17.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/5.jpg",
          "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/13.jpg",
        ],
        "premium": false,
        "price": 493,
        "rating": 3.8,
        "thumbnail": "https://assets.htmlacademy.ru/intensives/javascript-3/hotel/14.jpg",
        "title": "The house among olive ",
        "type": "house",
      }
    }
    roundRating={false}
  />
</article>
`;
